[package]
name = "wasmmodule"
version = "0.1.0"
authors = ["repl.it user <replituser@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nuklear-rust = {version = "~0.6"}
nuklear-backend-wgpurs = {version = "~0.3"}
winit = "~0.20"
wgpu = "~0.4"
image = "~0.21"
#wasm-bindgen = "0.2.71"
#mogwai = "0.4.0"